Finish up register allocation, sans output